--- a/Factions/Business.yaml
+++ b/Factions/Business.yaml
@@ -65,6 +65,84 @@ OutfitClothes:
 - Formkey: 696485
   Modname: Starfield.esm
   EditorId: Outfit_Citizen_Formal [OTFT:000AA0A5]
+- Formkey: 1052202
+  Modname: Starfield.esm
+  EditorId: Outfit_FC_Neon_RT_Generic_ExecutiveClient_Male03 [OTFT:00100E2A]
+- Formkey: 1052204
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Neon_BusinessSuit_02_Neuroamp [OTFT:00100E2C]
+- Formkey: 1052205
+  Modname: Starfield.esm
+  EditorId: Outfit_Citizen_Neuroamp [OTFT:00100E2D]
+- Formkey: 1052207
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_ShirtAndSlacks_Vest_Orange_Neuroamp [OTFT:00100E2F]
+- Formkey: 1052209
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Neon_BusinessSuit_01_Neuroamp [OTFT:00100E31]
+- Formkey: 1052210
+  Modname: Starfield.esm
+  EditorId: Outfit_UC_CY_JoyBryant [OTFT:00100E32]
+- Formkey: 1052212
+  Modname: Starfield.esm
+  EditorId: Outfit_UC_CY_GillySeong [OTFT:00100E34]
+- Formkey: 1260888
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Employee_Uniform_Formal_01 [OTFT:00133D58]
+- Formkey: 1260908
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Ryujin_BusinessSuit_Worker_02 [OTFT:00133D6C]
+- Formkey: 1260911
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Ryujin_BusinessSuit_Worker_01 [OTFT:00133D6F]
+- Formkey: 1260912
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Ryujin_BusinessSuit_Manager_02 [OTFT:00133D70]
+- Formkey: 1260919
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Ryujin_BusinessSuit_Manager_01 [OTFT:00133D77]
+- Formkey: 1260921
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Ryujin_BusinessSuit_Executive_02 [OTFT:00133D79]
+- Formkey: 1260956
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_City_CapeSuit [OTFT:00133D9C]
+- Formkey: 1260964
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Neon_BusinessSuit_02 [OTFT:00133DA4]
+- Formkey: 1260965
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Neon_BusinessSuit_01 [OTFT:00133DA5]
+- Formkey: 1416273
+  Modname: Starfield.esm
+  EditorId: Outfit_AelysOrtiz [OTFT:00159C51]
+- Formkey: 1433379
+  Modname: Starfield.esm
+  EditorId: Outfit_DeziZhang [OTFT:0015DF23]
+- Formkey: 1467385
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Ryujin_BusinessSuit_Worker_Any [OTFT:001663F9]
+- Formkey: 1467386
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Ryujin_BusinessSuit_Manager [OTFT:001663FA]
+- Formkey: 2497029
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_City_CapeSuit_blue [OTFT:00261A05]
+- Formkey: 1554166
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_City_Shirt [OTFT:0017B6F6]
+- Formkey: 1790723
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_City_Shirt_Blue [OTFT:001B5303]
+- Formkey: 1790724
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_City_Shirt_Brown [OTFT:001B5304]
+- Formkey: 1790725
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_City_Shirt_Green [OTFT:001B5305]
+- Formkey: 2535677
+  Modname: Starfield.esm
+  EditorId: Outfit_Merchant [OTFT:0026B0FD]
 
 
   
