--- a/Factions/Party Citizens.yaml
+++ b/Factions/Party Citizens.yaml
@@ -17,4 +17,12 @@ OutfitClothes:
 - Formkey: 173216
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Resortwear_02 [OTFT:0002A4A0]
-
+- Formkey: 779339
+  Modname: Starfield.esm
+  EditorId: Outfit_PD_GenericGuest [OTFT:000BE44B]
+- Formkey: 1260945
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Neon_Entertainer_01 [OTFT:00133D91]
+- Formkey: 1260944
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Neon_Entertainer_BorealUS [OTFT:00133D90]
