--- a/Factions/Truckers.yaml
+++ b/Factions/Truckers.yaml
@@ -26,6 +26,11 @@ OutfitSpacesuit:
 - Formkey: 94340
   Modname: Starfield.esm
   EditorId: Outfit_Spacesuit_Trucker_NoHelmet_NoBackpack [OTFT:00017084]
+  Helmet: false
+- Formkey: 1783019
+  Modname: Starfield.esm
+  EditorId: Outfit_Spacesuit_Trucker_NoHelmet [OTFT:001B34EB]
+  Helmet: false
 - Formkey: 233634
   Modname: Starfield.esm
   EditorId: Outfit_Spacesuit_Loot_Trucker [OTFT:000390A2]
@@ -33,48 +38,63 @@ OutfitClothes:
 - Formkey: 2440088
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_Flannel_01_NoHat [OTFT:1260873]
+  Helmet: false
 - Formkey: 1260874
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_Flannel_01_with_Hat [OTFT:00133D4A]
 - Formkey: 1260879
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_AShirt_01_NoHat [OTFT:00133D4F]
+  Helmet: false
 - Formkey: 1260878
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_AShirt_01_with_Hat [OTFT:00133D4E]
 - Formkey: 1260875
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_AShirt_Jacket_01_NoHat [OTFT:00133D4B]
+  Helmet: false
 - Formkey: 1260876
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_AShirt_Jacket_01_with_Hat [OTFT:00133D4C]
 - Formkey: 1260873
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_Flannel_01_NoHat [OTFT:00133D49]
+  Helmet: false
 - Formkey: 1260874
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_Flannel_01_with_Hat [OTFT:00133D4A]
 - Formkey: 1260870
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_Flannel_Jacket_01_NoHat [OTFT:00133D46]
+  Helmet: false
 - Formkey: 1260872
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_Flannel_Jacket_01_with_Hat [OTFT:00133D48]
 - Formkey: 1260867
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_LongSleeve_01_NoHat [OTFT:00133D43]
+  Helmet: false
 - Formkey: 1260869
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_LongSleeve_01_with_Hat [OTFT:00133D45]
 - Formkey: 1260865
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_LongSleeve_Jacket_01_NoHat [OTFT:00133D41]
+  Helmet: false
 - Formkey: 1260864
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_Tee_01_with_Hat [OTFT:00133D40]
 - Formkey: 1260861
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_Tee_Jacket_01_NoHat [OTFT:00133D3D]
+  Helmet: false
 - Formkey: 1260862
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Trucker_Tee_Jacket_01_with_Hat [OTFT:00133D3E]
+- Formkey: 1260863
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_Trucker_Tee_01_NoHat [OTFT:00133D3F]
+  Helmet: false
+- Formkey: 3977078
+  Modname: Starfield.esm
+  EditorId: MQ305_HopetechGhost_Outfit [OTFT:003CAF76]
