--- a/StarArmory.csproj
+++ b/StarArmory.csproj
@@ -7,6 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>logo.ico</ApplicationIcon>
+    <AssemblyName>$(MSBuildProjectName)-tool</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
