--- a/StarArmory.csproj
+++ b/StarArmory.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="YamlDotNet" Version="13.7.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
