--- a/StarArmory.csproj
+++ b/StarArmory.csproj
@@ -24,4 +24,10 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Factions\Akila Citizens.yaml">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
